# blender-mcp

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER_SETUP.md  PR_DRAFT.md  PR_DRAFT_SESSION_REFACTOR.md  PR_DRAFT_split_blender_ui.md  PR_NOTES_EMBEDDED_ADAPTER.md  README.md  addon.py  main.py  mypy.ini  pyproject.toml  pytest-report.xml  start-server.ps1  tmp_remote_test_dispatcher.py
.github/: CODEOWNERS  copilot-instructions.md  pull_request_body_feature_port_refactor.md
blender_mcp/: __init__.py  server.py
docs/: ADDON_LAYOUT.md  AI_SESSION_CHANGES.md  INVENTORY_CONSOLIDATION.md  INVENTORY_FULL.md  ISSUES_LEGACY_DRAFTS.md  LEGACY_ISSUES_COMMANDS.md  LEGACY_TRACKER.md  LEGACY_WITHDRAWAL_PLAN.md  PROJECT_JOURNAL.addendum.md  PROJECT_JOURNAL.md  PROJECT_JOURNAL.refactor_connection.md  PR_STUB_connection_stabilize.md  PR_STUB_consolidate_server.md  PR_STUB_unify_dispatcher.md  README.md  TASKS_AND_PRACTICES.md  TRANSPORT_PHASE_A.md  architecture.md  archive_symbol_mapping.md  assistant_preferences.md  embedded_adapter.md  endpoint_mapping.md  endpoint_mapping_detailed.md  endpoint_mapping_from_copy_server.md
openspec/: CHANGE_TEMPLATE.md  project.md
scripts/: check_ia_docs_sync.ps1  check_specs_links.py  ci_local.ps1  compare_ci_locally.ps1  create_desktop_shortcut.ps1  desktop_start.ps1  export_missing_spec_refs.py  gemini_bridge.py  generate_services_metadata.py  generate_specs_index.py  run_gemini_bridge.ps1  run_local_ia_checks.ps1  run_tests.ps1  send_gemini_last_to_blender.ps1  set_gemini_key.ps1  smoke_connection_test.py  standardize_specs_metadata.py  start-server.ps1  sync_specs_to_ia_assistant.py  uvicorn_start.ps1  validate_ia_yaml.py  verify_local_ci.ps1
tests/: conftest.py  test_addon_import.py  test_addon_import_safe.py  test_addon_prefs.py  (+93 more)
(+346 files in other folders)
